3rd day of kokoa clone 2024

--- a/more.html
+++ b/more.html
@@ -25,19 +25,14 @@
       </div>
     </div>
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <span> <i class="fas fa-search fa-2x"></i></span
         ><span><i class="fas fa-music fa-2x"></i></span>
-        <span> <i class="fas fa-cog fa-2x"></i> </span>
-      </div>
+        <span><a href="settings.html"><i class="fas fa-cog fa-2x"></i> </span>
+        </a> </div>
     </header>
-    <a id="friends-display-link">
-      <i class="fas fa-info-circle"></i> Friends'name display
-      <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-
-    <main class="main-screen">
+    <main class="main-screen more-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
@@ -46,34 +41,49 @@
           />
           <div class="user-component__text">
             <h4 class="user-component__title">Kim sugin</h4>
-            <!--<h6 class="user-component__subtitle">this is what I do</h6>-->
-          </div>
-        </div>
-        <div class="user-component__column"></div>
-      </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            class="user-component__avatar user-component__avatar--sm"
-            src="img/avatar.webp"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title user-component__title--not-bold">
-              Channel
-            </h4>
+            <h6 class="user-component__subtitle">
+              +010 3304 2344
+              <div class="point-dot">!</div>
+            </h6>
           </div>
         </div>
         <div class="user-component__column">
-          <div>
-            <span>2</span>
-            <i class="fas fa-chevron-right fa-xs"></i>
+          <i class="far fa-comment-alt fa-2x"></i>
+        </div>
+      </div>
+      <div class="icon-row">
+        <div class="icon-row__icon">
+          <i class="far fa-calendar"></i>
+          <span>Calendar</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="far fa-smile-wink"></i>
+          <span>Emoticons</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-paint-brush"></i>
+          <span>Themes</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-file-invoice-dollar"></i>
+          <span>Account</span>
+        </div>
+      </div>
+      <div class="more-suggestion">
+        <h4 class="more-suggestion__title">Suggestion</h4>
+      </div>
+      <div class="more-suggestion__icons">
+        <div class="more-suggestion__icon">
+          <div class="more-suggestion__icon-image">
+            <i class="fas fa-quote-left"></i>
           </div>
+          <span class="more-suggestion__icon-text">Kokoa Talk</span>
+        </div>
+        <div class="more-suggestion__icon">
+          <div class="more-suggestion__icon-image">
+            <i class="fas fa-quote-left"></i>
+          </div>
+          <span class="more-suggestion__icon-text">Kokoa Talk</span>
         </div>
       </div>
     </main>
