--- a/settings.html
+++ b/settings.html
@@ -24,47 +24,58 @@
         <!--Lightning Icon-->
       </div>
     </div>
-    <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
-      <div class="screen-header__icons">
-        <span> <i class="fas fa-search fa-2x"></i></span>
-        <span><i class="far fa-comment-dots fa-2x"></i></span>
-        <span><i class="fas fa-music fa-2x"></i></span>
-        <span> <i class="fas fa-cog fa-2x"></i> </span>
+    <header class="alt-header">
+      <div class="alt-header__column">
+        <a href="more.html">
+          <i class="fas fa-angle-left fa-3x"></i>
+        </a>
       </div>
+      <div class="alt-header__column">
+        <h1 class="alt-header__title">Setttings</h1>
+      </div>
+      <div class="alt-header__column"><i class="fas fa-search fa-2x"></i></div>
     </header>
     <main class="main-screen">
-      <a href="chat.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar user-component__avatar"
-              src="img/avatar.webp"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">Kim sugin</h4>
-              <h6 class="user-component__subtitle">this is what I do</h6>
-            </div>
+      <ul class="settings-list">
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-exclamation"></i>
+            <span>Notification</span>
           </div>
-          <div class="user-component__column">
-            <span class="user-component__time">23:33</span>
-            <div class="badge">1</div>
+          <div class="settings__setting-column"></div>
+        </li>
+
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-flask"></i>
+            <span>Kakao lab</span>
           </div>
-        </div>
-      </a>
+          <div class="settings__setting-column"></div>
+        </li>
+
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-code-branch"></i>
+            <span>Version</span>
+          </div>
+          <div class="settings__setting-column">
+            <span>latest version</span>
+          </div>
+        </li>
+      </ul>
     </main>
 
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="far fa-user fa-2x"></i
+            ><i class="fas fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fas fa-comments fa-2x"></i
+            <i class="far fa-comments fa-2x"> </i
           ></a>
         </li>
         <li class="nav__btn">
