4th day of kokoa clone 2024

--- a/chat.html
+++ b/chat.html
@@ -57,9 +57,20 @@
         </div>
       </div>
     </main>
+    <form class="reply">
+      <div class="reply__column">
+        <i class="far fa-plus-square fa-2x"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" placeholder="write message" />
+        <i class="far fa-smile lg"></i>
+        <button><i class="fas fa-arrow-up"></i></button>
+      </div>
+    </form>
     <script
       src="https://kit.fontawesome.com/8579c3e92a.js"
       crossorigin="anonymous"
     ></script>
+    <div id="no-mobile">Your screen is too bigㅠㅠ</div>
   </body>
 </html>
