--- a/more.html
+++ b/more.html
@@ -29,8 +29,10 @@
       <div class="screen-header__icons">
         <span> <i class="fas fa-search fa-2x"></i></span
         ><span><i class="fas fa-music fa-2x"></i></span>
-        <span><a href="settings.html"><i class="fas fa-cog fa-2x"></i> </span>
-        </a> </div>
+        <span
+          ><a href="settings.html"><i class="fas fa-cog fa-2x"></i> </a
+        ></span>
+      </div>
     </header>
     <main class="main-screen more-screen">
       <div class="user-component">
@@ -106,7 +108,7 @@
             ><i class="fas fa-search fa-2x"></i
           ></a>
         </li>
-        <li>
+        <li class="nav__btn">
           <a class="nav__link" href="more.html">
             <div class="nav__dot dot"></div>
             <i class="fas fa-ellipsis-h fa-lg"></i
@@ -118,5 +120,6 @@
       src="https://kit.fontawesome.com/8579c3e92a.js"
       crossorigin="anonymous"
     ></script>
+    <div class="no-mobile">Your screen is too bigㅠㅠ</div>
   </body>
 </html>
