--- a/chats.html
+++ b/chats.html
@@ -72,7 +72,7 @@
             ><i class="fas fa-search fa-2x"></i
           ></a>
         </li>
-        <li>
+        <li class="nav__btn">
           <a class="nav__link" href="more.html">
             <div class="nav__dot dot"></div>
             <i class="fas fa-ellipsis-h fa-lg"></i
@@ -84,5 +84,6 @@
       src="https://kit.fontawesome.com/8579c3e92a.js"
       crossorigin="anonymous"
     ></script>
+    <div id="no-mobile">Your screen is too bigㅠㅠ</div>
   </body>
 </html>
