--- a/friends.html
+++ b/friends.html
@@ -77,7 +77,6 @@
         </div>
       </div>
     </main>
-
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
@@ -96,7 +95,7 @@
             ><i class="fas fa-search fa-2x"></i
           ></a>
         </li>
-        <li>
+        <li class="nav__btn">
           <a class="nav__link" href="more.html">
             <div class="nav__dot dot"></div>
             <i class="fas fa-ellipsis-h fa-lg"></i
@@ -108,5 +107,6 @@
       src="https://kit.fontawesome.com/8579c3e92a.js"
       crossorigin="anonymous"
     ></script>
+    <div id="no-mobile">Your screen is too bigㅠㅠ</div>
   </body>
 </html>
