--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
       <input type="submit" value="Log In" />
       <a href="#">Find Kakao Account or Password</a>
     </form>
-
+    <div id="splash-screen"><i class="fas fa-comments fa-2x"> </i></div>
     <script
       src="https://kit.fontawesome.com/8579c3e92a.js"
       crossorigin="anonymous"
     ></script>
+    <div id="no-mobile">Your screen is too bigㅠㅠ</div>
   </body>
 </html>
