--- a/friends.html
+++ b/friends.html
@@ -107,6 +107,6 @@
       src="https://kit.fontawesome.com/8579c3e92a.js"
       crossorigin="anonymous"
     ></script>
-    <div id="no-mobile">Your screen is too bigㅠㅠ</div>
+    <div id="no-mobile">Your screen is super bigㅠㅠ</div>
   </body>
 </html>
