--- a/find.html
+++ b/find.html
@@ -119,6 +119,6 @@
       src="https://kit.fontawesome.com/8579c3e92a.js"
       crossorigin="anonymous"
     ></script>
-    <div class="no-mobile">Your screen is too bigㅠㅠ</div>
+    <div id="no-mobile">Your screen is too bigㅠㅠ</div>
   </body>
 </html>
