--- a/settings.html
+++ b/settings.html
@@ -95,5 +95,6 @@
       src="https://kit.fontawesome.com/8579c3e92a.js"
       crossorigin="anonymous"
     ></script>
+    <div id="no-mobile">Your screen is too bigㅠㅠ</div>
   </body>
 </html>
