--- a/find.html
+++ b/find.html
@@ -79,7 +79,7 @@
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="/img/avatar.webp" />
+              <img src="img/avatar.webp" />
               <div class="open-post__heart-count">
                 <i class="fas fa-heart xs"></i><span>332</span>
               </div>
