--- a/chat.html
+++ b/chat.html
@@ -39,7 +39,7 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Tuesday, June 30, 2020</div>
       <div class="message-row">
-        <img src="/img/avatar.webp" />
+        <img src="img/avatar.webp" />
         <div class="message-row__content">
           <span class="message-row__author">YEP</span>
           <div class="message-row__inform">
