--- a/more.html
+++ b/more.html
@@ -54,19 +54,35 @@
         </div>
       </div>
       <div class="icon-row">
-        <div class="icon-row__icon">
+        <div class="icon-row__icon number8">
           <i class="far fa-calendar"></i>
           <span>Calendar</span>
         </div>
-        <div class="icon-row__icon">
+        <div class="icon-row__icon number8">
           <i class="far fa-smile-wink"></i>
           <span>Emoticons</span>
         </div>
-        <div class="icon-row__icon">
+        <div class="icon-row__icon number8">
           <i class="fas fa-paint-brush"></i>
           <span>Themes</span>
         </div>
-        <div class="icon-row__icon">
+        <div class="icon-row__icon number8">
+          <i class="fas fa-file-invoice-dollar"></i>
+          <span>Account</span>
+        </div>
+        <div class="icon-row__icon number8">
+          <i class="far fa-calendar"></i>
+          <span>Calendar</span>
+        </div>
+        <div class="icon-row__icon number8">
+          <i class="far fa-smile-wink"></i>
+          <span>Emoticons</span>
+        </div>
+        <div class="icon-row__icon number8">
+          <i class="fas fa-paint-brush"></i>
+          <span>Themes</span>
+        </div>
+        <div class="icon-row__icon number8">
           <i class="fas fa-file-invoice-dollar"></i>
           <span>Account</span>
         </div>
