--- a/find.html
+++ b/find.html
@@ -42,7 +42,7 @@
         </div>
         <div class="icon-row__icon">
           <i class="fas fa-address-book"></i>
-          <span>ADD BY Contact</span>
+          <span>Contact</span>
         </div>
         <div class="icon-row__icon">
           <i class="fas fa-fingerprint"></i>
