--- a/chats.html
+++ b/chats.html
@@ -35,7 +35,7 @@
     </header>
     <main class="main-screen">
       <a href="chat.html">
-        <div class="user-component">
+        <div class="user-component chat_user-component">
           <div class="user-component__column">
             <img
               class="user-component__avatar user-component__avatar"
@@ -49,6 +49,21 @@
           <div class="user-component__column">
             <span class="user-component__time">23:33</span>
             <div class="badge">1</div>
+          </div>
+        </div>
+        <div class="user-component chat_user-component">
+          <div class="user-component__column">
+            <img
+              class="user-component__avatar user-component__avatar"
+              src="img/avatar.webp"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Kim sugin</h4>
+              <h6 class="user-component__subtitle">this is what I do</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">23:33</span>
           </div>
         </div>
       </a>
