--- a/more.html
+++ b/more.html
@@ -45,7 +45,7 @@
             <h4 class="user-component__title">Kim sugin</h4>
             <h6 class="user-component__subtitle">
               +010 3304 2344
-              <div class="point-dot">!</div>
+              <div class="user-component__point-dot point-dot">!</div>
             </h6>
           </div>
         </div>
